# NuoCode

./: .gitignor  .gitignore  README.md  pyproject.toml
.nuocode/: config.yaml.example  settings.yaml.example
docs/: Nuo-spec.md
docs/chap02/: checklist.md  plan.md  spec.md  task.md
examples/: smoke.py
src/nuocode/: __init__.py  __main__.py  cli.py  config.py  config.yaml  conversation.py  prompt.py
src/nuocode/agent/: __init__.py  agent_tool.py  agent_worktree.py  fork.py  launch.py  permission_upgrade.py  runtime.py  team_hook.py  team_mailbox.py
src/nuocode/cli/: team_member.py
tests/: test_agent.py  test_agent_worktree.py  test_anthropic_system.py  test_builtin_worktree.py  test_chap15.py  test_command_builtins.py  test_command_dispatch.py  test_command_registry.py  test_command_skills.py  test_compact.py  test_completion.py  test_config.py  test_conversation.py  test_instructions_loader.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_tool.py  test_memory.py  test_permission.py  test_prompt.py  test_prompt_skills.py  test_session.py  test_skills.py  test_tool.py  test_tool_ctx.py  test_tui.py  test_worktree_create.py  test_worktree_git.py  test_worktree_lifecycle.py  test_worktree_manager.py  test_worktree_slug.py  test_worktree_sweep.py
tests/agent/: test_agent_tool.py  test_fork.py  test_run_to_completion.py
tests/hook/: __init__.py  test_engine.py  test_executor.py  test_loader.py
tests/permission/: test_matcher.py  test_rule.py
tests/subagent/: test_catalog.py  test_parser.py
tests/task/: test_manager.py
tests/tool/: test_filter.py
(+139 files in other folders)
